--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>Pokedex</title>
     <link href="styles.css" rel="stylesheet" type="text/css" />
   </head>
+
   <body>
+    <ul class="pokemon-list"></ul>
+    
     <script src="js/script.js"></script>
   </body>
 </html>
