--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Pokedex</title>
-    <link href="styles.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" type="text/css" href="CSS/styles.css" />
   </head>
 
   <body>
     <ul class="pokemon-list"></ul>
-    
-    <script src="js/script.js"></script>
+    <strong>
+      <script src="js/promise-polyfill.js"></script>
+      <script src="js/fetch-polyfill.js"></script>
+      <script src="js/script.js"></script>
+    </strong>
   </body>
+
 </html>
