--- a/index.html
+++ b/index.html
@@ -8,12 +8,25 @@
   </head>
 
   <body>
-    <ul class="pokemon-list"></ul>
-    <strong>
-      <script src="js/promise-polyfill.js"></script>
-      <script src="js/fetch-polyfill.js"></script>
-      <script src="js/script.js"></script>
-    </strong>
-  </body>
+  <!-- Main Title & List -->
+    <div>
+      <h1>POKEDEX</h1>
+    </div>
+    <div class="mainlist">
+      <ul class="pokemon-list" style="list-style-type: none;"></ul>
+    </div>
 
+  <!-- Modals -->
+   <!-- Add a button to trigger the modal -->
+   <!-- <button id="show-modal">Show modal</button> -->
+   
+   <div id="modal-container"></div>
+
+   <!-- Include your JavaScript files -->
+ 
+   <script src="js/promise-polyfill.js"></script>
+   <script src="js/fetch-polyfill.js"></script>
+   <script src="js/script.js"></script>
+
+ </body>
 </html>
