--- a/index.html
+++ b/index.html
@@ -1,85 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokédex</title>
     <link rel="shortcut icon" href="img/favicon.ico">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="dist/styles.mini.css">
-    
-  </head>
-
-  <body>
-  <!-- Navigation Bar -->
-  <nav class="navbar navbar-dark bg-dark fixed-top navbar-expand-lg">
-    <a class="navbar-brand pokemon-title" href="#">Pokédex
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler"
-        aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarToggler">
-        <form class="form-inline my-2 my-lg-0">
-          <span id="showNumberInNavbar" class="navbar-text">0 of 1292 pokemons loaded</span>
-            <input class="form-control mr-sm-2" type="search" placeholder="Search this page"
-                aria-label="Search this page">
-            <button class="btn btn-outline-success my-2 my-sm-0 searchButton" type="submit">Search</button>
-        </form>
-    </div>
-</nav>
-
-<div class="displayInfoText">
-  Click on a Pokémon's name for details. Scroll down and hit 'Load More' for additional Pokémon
-</div>
-
-<!-- Modals -->
-<div class=" modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="ModalLabel"
-aria-hidden="true">
-<div class="modal-dialog" role="document">
-    <div class="modal-content">
-        <div class="modal-header">
-            <h5 class="modal-title" id="ModalLabel"></h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
+</head>
+<body>
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-dark bg-dark fixed-top navbar-expand-lg">
+        <a class="navbar-brand pokemon-title" href="#">Pokédex</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarToggler">
+            <form class="form-inline my-2 my-lg-0">
+                <span id="showNumberInNavbar" class="navbar-text">0 of 1292 pokemons loaded</span>
+                <input class="form-control mr-sm-2" type="search" placeholder="Search this page" aria-label="Search this page">
+                <button class="btn btn-outline-success my-2 my-sm-0 searchButton" type="submit">Search</button>
+            </form>
         </div>
-        <div class="modal-body">
-        </div>
-        <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+    </nav>
+    <div class="displayInfoText">Click on a Pokémon's name for details. Scroll down and hit 'Load More' for additional Pokémon</div>
+    <!-- Modals -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="ModalLabel"></h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body"></div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
         </div>
     </div>
-  </div>
-</div>
- 
-  <!-- List of pokemon -->
-  <ul class="list-group">
-    <div class="row pokemon-list"></div>
-</ul>
-
-<!-- Show # of pokemons-->
-<div id="displayNumberPokemons" class="displayInfoText"></div>
-
-<!-- Load more Button & get back to List Button -->
-<div id="loadMoreDiv">
-  <button class="loadMoreButton btn btn-block">load more...</button></div>
-  <div id="backToList"><button class="backToList btn btn-block invisible">back to list of all loaded pokemon</button></div>
-  
-  <div class="imprint">Data loaded from pokeapi.co</div>
-
-<!-- JQuery -->
-<script src="https://code.jquery.com/jquery-3.3.1.min.js"
-  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-   <script src="js/promise-polyfill.js"></script>
-   <script src="js/fetch-polyfill.js"></script>
-   <script src="dist/script.mini.js"></script>
- </body>
-
+    <!-- List of pokemon -->
+    <div class="container">
+        <div class="row pokemon-list"></div>
+    </div>
+    <!-- Show # of pokemons-->
+    <div id="displayNumberPokemons" class="displayInfoText"></div>
+    <!-- Load more Button & get back to List Button -->
+    <div id="loadMoreDiv">
+        <button class="loadMoreButton btn btn-block">load more...</button>
+    </div>
+    <div id="backToList">
+        <button class="backToList btn btn-block invisible">back to list of all loaded pokemon</button>
+    </div>
+    <div class="imprint">Data loaded from pokeapi.co</div>
+    <!-- JQuery -->
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="js/promise-polyfill.js"></script>
+    <script src="js/fetch-polyfill.js"></script>
+    <script src="dist/script.mini.js"></script>
+</body>
 </html>
